fixed alignment issue

--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -428,7 +428,7 @@ section {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 400px;
+  padding: 0 40px;
 }
 
 .contact-heading {
@@ -462,30 +462,47 @@ section {
 .social-icon {
   display: inline-block;
   padding: 10px;
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   color: var(--text-color);
   text-decoration: none;
   transition: all 0.3s ease;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .social-icon:hover {
   color: var(--primary-color);
   transform: translateY(-2px);
 }
+.social-icon img {
+  width: 50px; /* Set a smaller width for the icon images */
+  height: 50px; /* Set a smaller height for the icon images */
+}
 
 .contact-button {
-  align-self: flex-start;
+  display: block; /* Ensure the button behaves like a block element */
+  margin: 0 auto; /* Centers the button horizontally */
   padding: 12px 30px;
   font-size: 1rem;
-  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin-bottom: 30px;
+  margin-top: 30px;
 }
 
+#contact-btn {
+  justify-content: center;
+  align-items: center;
+}
 .contact-button:hover {
   background-color: #1aa34a; /* Slightly darker green */
   transform: translateY(-2px);
